[tool.poetry]
name = "it_health"
version = "0.1.0"
description = ""
authors = ["an.truong"]
packages = [
    { include = "it_health", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
notebook = "^6.4.10"
Sphinx = { version = "^5.0.1", optional = true }
numpy = "^1.23.1"
pandas = "^1.4.3"
scipy = "^1.8.1"
pynisher = "0.6.4"
auto-sklearn = "0.14.7"
dask = {extras = ["distributed"], version = "^2022.8.1"}
TPOT = "^0.11.7"
logzero = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = {version = "^7.1.2", allow-prereleases = true}
pylint = {version = "*", allow-prereleases = true}
mypy = {version = "^0.940", allow-prereleases = true}
isort = {version = "^5.10.1", allow-prereleases = true}
black = {version = "^22.3.0", allow-prereleases = true}
coverage = "^6.4.1"
pydocstyle = "*"
pre-commit = "^2.19.0"
hypothesis = "^6.53.0"
Faker = "^13.15.1"
matplotlib = "^3.5.3"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pylint]
[tool.pylint.'FORMAT']
    max-line-length=120
[tool.pylint.'BASIC']
    good-names=["ax", "X", "y"]
[tool.pylint.'MESSAGES CONTROL']
    disable=["import-error"]

[tool.mypy]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
